[opt] 调整查询文章列表结构
